redirected to payment page

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <h5 class="text-white mb-lg-5 text-decoration-underline">Deluxe Ocean View</h5>
                                 <p class="text-white">Bask in luxury with breathtaking ocean views from your private suite.</p>
                                 <p class="text-white fw-bold mt-lg-4" ><span class="rate">Starting from </span>$199 / Per Night</p>
-                                <a class="main-btn border-white text-white mt-lg-5" href="http://127.0.0.1:5500/payment/payment.html" target="_blank">Book now</a>
+                                <a class="main-btn border-white text-white mt-lg-5" href="payment/payment.html" target="_blank">Book now</a>
                             </div>
                         </div> 
                     </div> 
@@ -205,7 +205,7 @@
                                 </h5>
                                 <p class="text-white">Experience urban elegance and modern comfort in the heart of the city.</p>
                                 <p class="text-white fw-bold mt-lg-4"><span class="rate">Starting from </span>$249 / Per Night</p>
-                                <a class="main-btn border-white text-white mt-lg-5" href="http://127.0.0.1:5500/payment/payment.html" target="_blank">Book now</a>
+                                <a class="main-btn border-white text-white mt-lg-5" href="payment/payment.html" target="_blank">Book now</a>
                             </div>
                         </div>
                     </div> 
@@ -219,7 +219,7 @@
                                 </h5>
                                 <p class="text-white">Spacious and inviting, perfect for creating cherished memories with loved ones.</p>
                                 <p class="text-white fw-bold mt-lg-4"><span class="rate">Starting from </span>$299 / Per Night</p>
-                                <a class="main-btn border-white text-white mt-lg-5" href="http://127.0.0.1:5500/payment/payment.html" target="_blank
+                                <a class="main-btn border-white text-white mt-lg-5" href="payment/payment.html" target="_blank
                                 ">Book now</a>
                             </div>
                         </div>
